--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,20 +1,31 @@
 ---
+import Layout from "../../layouts/Layout.astro";
 const allPosts = await Astro.glob("./*.md");
 allPosts.reverse();
+const postList = allPosts.map((post) => {
+    return {
+        url: post.url,
+        title: post.frontmatter.title,
+        date: post.frontmatter.date,
+    };
+});
 ---
 
-<h1>Blog</h1>
-
-<ul>
-    {
-        allPosts.map((post) => (
-            <li>
-                <a href={post.url}>{post.frontmatter.title} - 
-    {post.frontmatter.date}</a>
-            </li>
-        ))
-    }
-</ul>
+<Layout title="Blog">
+    <h1>Blog</h1>
+    
+    <ul>
+        {
+            postList.map((post) => (
+                <li>
+                    <a href={post.url}>
+                        {post.title} - {post.date}
+                    </a>
+                </li>
+            ))
+        }
+    </ul>
+</Layout>
 
 <style>
     ul {
