--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,67 +1,19 @@
----
-import Layout from "../layouts/Site.astro";
----
-
-<Layout title="Jason Sackey">
-	<img src="/images/projection.jpg" alt="Jason's face" width="256" height="256" class="selfie">
-	<h1>Jason Sackey</h1>
-	<div class="container">
-		<p>London-based software developer. Web, games, cutting-edge of tech, the history of computing, science fiction, VR. Solving problems with simple design and clean code.</p>
-		<ul>
-		<li><a href="/blog">Writing on my blog</a>
-			<div><b>Latest:</b>
-			<a href="/blog/2024-10-08-migrating-from-wordpress-to-astro">Migrating this site from WordPress to Astro - 2024-10-08</a></div>
-		</li>
-		<li><a href="https://x.com/jsonsackey">Posts on X</a></li>
-		<li>Game prototypes
-			<ul class="games">
-				<li>
-				<a href="https://sackeyjason.github.io/orbital/"><img src="/images/orbital.png" alt="tetrominoes curved around an arc"> Orbital (WIP)</a>
-				<p>Build a lovely space habitat in this tetromino-based action-puzzle game.
-				</li>
-				<li><a href="https://github.com/sackeyjason/bankoso/"><img src="/images/bankoso.png" alt="4 screenshots"> Bankoso</a>
-				<p>Sokoban-like puzzle game. Push blocks around. Unlike in the original, here you can shove multiple blocks simultaneously.
-				</li>
-			</ul>
-		</li>
-		<li><a href="LinkedIn">LinkedIn profile</a>
-		</li>
-		</ul>
-	</div>
-</Layout>
+<html>
+  <head>
+  <title>Jason Sackey</title>
+  </head>
+  <body>
+  coming soon
+  </body>
+</html>
 
 <style>
-body{
-	margin: 0;
-}
-.selfie {
-	margin-bottom: -64px;
-}
-h1 {
-	color: white;
+
+
+body {
+  height: 90vh;
+  display: grid;
+  place-items: center;
 }
 
-.container {
-	margin: 0;
-	padding: 0 1rem;
-	max-width: 740px;
-}
-.games {
-	margin: 1rem 0;
-	padding: 0 0 0 0.5rem;
-	display: grid;
-	gap: 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-}
-.games li {
-	overflow: hidden;
-	padding: 1rem;
-	border: 1px solid;
-	border-radius: 8px;
-}
-.games img {
-	float: left;
-	width: 128px;
-	margin: 0 .5rem .5rem 0;
-}
 </style>
