--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import L from "./Site.astro";
+import JSHeader from "../components/JSHeader.astro";
 
 interface Props {
 	title: string;
@@ -9,11 +10,7 @@ const { title } = Astro.props;
 ---
 
 <L title={title}>
-<header>
-	<a href="/" class="logoLink">
-		<span class="logo"> JS </span>
-	</a>
-</header>
+<JSHeader />
 <div>
 	<div class="container">
 		<slot />
@@ -41,16 +38,5 @@ const { title } = Astro.props;
 		padding: 2rem;
 		margin: 0 auto;
 		max-width: 640px;
-	}
-	.logoLink {
-		display: grid;
-		place-items: center;
-		height: 64px;
-		width: 48px;
-		background-image: none, url(/images/projection.jpg), none;
-		background-size: cover;
-		color: white;
-		text-decoration: none;
-		font-weight: bold;
 	}
 </style>
