--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -22,20 +22,28 @@ const { title } = Astro.props;
 		* {
 			box-sizing: border-box;
 		}
-		html {
+		:root {
 			font-family: system-ui, sans-serif;
 			overflow-y: scroll;
-			overflow-x: hidden;
-			--logoBg: linear-gradient(45deg, teal, midnightblue);
+			background: black;
+			color: white;
 		}
 		body {
 			margin: 0;
 			min-height: 100vh;
 		}
-        img {
-            vertical-align: middle;
-            max-width: 100%;
-            height: auto;
-        }
+		img {
+			vertical-align: middle;
+			max-width: 100%;
+			height: auto;
+		}
+		a {
+			color: hotpink;
+		}
+		a:focus,
+		a:hover {
+			color: gold;
+		}
+
 	</style>
 </html>
