4 social icons component

--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -1,5 +1,8 @@
 ---
+import Layout from "../layouts/Layout.astro";
 import Soc from "../components/Socials.astro";
 ---
 
-<Soc />
+<Layout title="S">
+    <Soc />
+</Layout>
