--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,10 +32,8 @@ const { title } = Astro.props;
 		margin: 0;
 		min-height: 100vh;
 	}
-	header {
-	}
 	.container {
-		padding: 2rem;
+		padding: 0 1rem;
 		margin: 0 auto;
 		max-width: 640px;
 	}
