--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,5 +1,5 @@
 <div class="socials">
-    <a href="https://x.com/jsonsackey">
+    <a href="https://x.com/jsonsackey" target="_blank">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="28"
@@ -14,7 +14,7 @@
         </svg>
     </a>
 
-    <a href="https://bsky.app/profile/jsonsackey.bsky.social">
+    <a href="https://bsky.app/profile/jsonsackey.bsky.social" target="_blank">
         <svg
             viewBox="0 0 64 57"
             width="28"
@@ -26,7 +26,7 @@
         >
     </a>
 
-    <a href="https://github.com/sackeyjason">
+    <a href="https://github.com/sackeyjason" target="_blank">
         <svg
             height="28"
             viewBox="0 0 24 24"
@@ -40,7 +40,7 @@
         </svg>
     </a>
 
-    <a href="https://www.instagram.com/jsonsackey/">
+    <a href="https://www.instagram.com/jsonsackey/" target="_blank">
         <svg
             class="svg-icon"
             viewBox="0 0 1024 1024"
@@ -54,7 +54,10 @@
         >
     </a>
 
-    <a href="https://www.linkedin.com/in/jason-sackey-8998aa5a/">
+    <a
+        href="https://www.linkedin.com/in/jason-sackey-8998aa5a/"
+        target="_blank"
+    >
         <svg
             xmlns="http://www.w3.org/2000/svg"
             height="28"
