--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Socials from "../../components/Socials.astro";
 const allPosts = await Astro.glob("./*.md");
 allPosts.reverse();
 const postList = allPosts.map((post) => {
@@ -13,7 +14,7 @@ const postList = allPosts.map((post) => {
 
 <Layout title="Blog">
     <h1>Blog</h1>
-    
+
     <ul>
         {
             postList.map((post) => (
@@ -25,6 +26,10 @@ const postList = allPosts.map((post) => {
             ))
         }
     </ul>
+
+    <hr>
+
+    <Socials />
 </Layout>
 
 <style>
@@ -32,5 +37,10 @@ const postList = allPosts.map((post) => {
         padding: 0;
         display: grid;
         gap: 0.5rem;
+        list-style: none;
+    }
+
+    hr {
+        margin: 2rem 0;
     }
 </style>
