--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,4 +37,8 @@ const { title } = Astro.props;
 		margin: 0 auto;
 		max-width: 640px;
 	}
+	.astro-code {
+		padding: 1rem;
+		border-radius: 1rem;
+	}
 </style>
