--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,13 @@ import Socials from "../components/Socials.astro";
 			</li>
 		</ul>
 
+		<h2>Climbing</h2>
+		<p>I use Instagram for my <a href="https://www.instagram.com/jsonsackey/">bouldering videos.</a></p>
+
+		<footer>
+			▿
+		</footer>
+
 		<style>
 			body {
 				margin: 0;
@@ -125,6 +132,11 @@ import Socials from "../components/Socials.astro";
 				float: left;
 				width: 128px;
 				margin: 0 0.5rem 0.5rem 0;
+			}
+			footer {
+				padding: 4rem 0;
+				text-align: center;
+				color: coral;
 			}
 		</style>
 	</div></Layout
