--- a/src/components/JSHeader.astro
+++ b/src/components/JSHeader.astro
@@ -1,19 +1,19 @@
 <header>
-	<a href="/" class="logoLink">
-		<span class="logo"> JS </span>
+	<a href="/">
+		<img src="/images/projection.jpg" alt="" class="pic" height="48" width="48">
+		<div class="title">jasonsackey.com</div>
 	</a>
 </header>
 
 <style>
-    .logoLink {
-		display: grid;
-		place-items: center;
-		height: 64px;
-		width: 48px;
-		background-image: none, url(/images/projection.jpg), none;
-		background-size: cover;
-		color: white;
+	a {
+		display: inline-flex;
+		gap: .5rem;
+		align-items: center;
 		text-decoration: none;
+		color: inherit;
+	}
+	.title {
 		font-weight: bold;
 	}
 </style>
