--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -15,31 +15,48 @@ const postList = allPosts.map((post) => {
 <Layout title="Blog">
     <h1>Blog</h1>
 
-    <ul>
+    <ul class="posts">
         {
             postList.map((post) => (
                 <li>
                     <a href={post.url}>
-                        {post.title} - {post.date}
+                        <span class="title">{post.title}</span>
+                        <span class="date">{post.date}</span>
                     </a>
                 </li>
             ))
         }
     </ul>
 
-    <hr>
+    <hr />
 
     <Socials />
 </Layout>
 
 <style>
-    ul {
+    .posts {
         padding: 0;
-        display: grid;
-        gap: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
         list-style: none;
     }
-
+    .posts a {
+        text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: .25rem;
+    }
+    .title {
+        font-weight: bold;
+        display: block;
+    }
+    .date {
+        color: white;
+        font-size: 14px;
+    }
     hr {
         margin: 2rem 0;
     }
