--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -54,7 +54,7 @@ const postList = allPosts.map((post) => {
         display: block;
     }
     .date {
-        color: white;
+        color: var(--color-text);
         font-size: 14px;
     }
     hr {
