--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="light-theme">
+<html lang="en" class="dark-theme">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
