--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ import LatestPosts from "../components/LatestPosts.astro";
 		<h2>Climbing</h2>
 		<p>I use Instagram for my <a href="https://www.instagram.com/jsonsackey/">bouldering videos.</a></p>
 
+		<p><a href="/feedback">Feedback</a></p>
 		<footer>
 			▿
 		</footer>
