--- a/src/components/Window.astro
+++ b/src/components/Window.astro
@@ -5,7 +5,7 @@ const { title } = Astro.props;
 <article class="root">
     <header class="title">{title}</header>
     <div class="body">
-        <slot></slot>
+        <slot />
     </div>
 </article>
 
