--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -23,16 +23,29 @@ const { title } = Astro.props;
 			box-sizing: border-box;
 		}
 		:root {
+			--mix: 0%;
 			font-family: system-ui, sans-serif;
 			overflow-y: scroll;
 			--color-bg: black;
 			--color-text: white;
 			--color-primary: hotpink;
+			--color-primary: color-mix(in hsl, hotpink, lightskyblue var(--mix));
 			--color-secondary: gold;
 			background: var(--color-bg);
 			color: var(--color-text);
+			animation: mixAlternate linear 8s alternate infinite;
 		}
-		.dark-theme {
+		@property --mix {
+			syntax: "<percentage>";
+			inherits: true;
+			initial-value: 0%;
+		}
+		@keyframes mixAlternate {
+			to {
+				--mix: 100%;
+			}
+		}
+		/* .dark-theme {
 			--color-bg: black;
 			--color-text: white;
 			--color-primary: hotpink;
@@ -43,7 +56,7 @@ const { title } = Astro.props;
 			--color-text: #444;
 			--color-primary: blue;
 			--color-secondary: tomato;
-		}
+		} */
 		body {
 			margin: 0;
 			min-height: 100vh;
