--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -25,6 +25,7 @@ const { title } = Astro.props;
 		:root {
 			--mix: 0%;
 			font-family: system-ui, sans-serif;
+			line-height: 1.4;
 			overflow-y: scroll;
 			--color-bg: black;
 			--color-text: white;
