remove feedback link

--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props;
 			--color-bg: black;
 			--color-text: white;
 			--color-primary: hotpink;
-			--color-primary: color-mix(in hsl, hotpink, lightskyblue var(--mix));
+			--color-primary: color-mix(in hsl, hotpink, lime var(--mix));
 			--color-secondary: gold;
 			background: var(--color-bg);
 			color: var(--color-text);
