--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,48 +32,48 @@ import Window from "../components/Window.astro";
 	</header>
 
 	<div class="container">
-		<Window title="writing">
+		<Window title="📝 writing">
 			<LatestPosts />
 			<p><a href="/blog">Full blog listing</a></p>
 		</Window>
 
-		<h2>Game prototypes</h2>
-
-		<ul class="games">
-			<li>
-				<h3>
-					<a href="https://sackeyjason.github.io/orbital/"
-						><img
-							src="/images/orbital.png"
-							alt="tetrominoes curved around an arc"
-						/> Orbital (WIP)</a
-					>
-				</h3>
-
-				<p>
-					Build a lovely space habitat in this tetromino-based
-					action-puzzle game.
-				</p>
+		<Window title="👾 games">
+			<h2>Game prototypes</h2>
+			<ul class="games">
 				<li>
 					<h3>
-						<a href="https://github.com/sackeyjason/bankoso/"
+						<a href="https://sackeyjason.github.io/orbital/"
 							><img
-								src="/images/bankoso.png"
-								alt="4 screenshots"
-							/> Bankoso</a
+								src="/images/orbital.png"
+								alt="tetrominoes curved around an arc"
+							/> Orbital (WIP)</a
 						>
 					</h3>
 
 					<p>
-						Sokoban-like puzzle game. Push blocks around. Unlike in
-						the original, here you can shove multiple blocks
-						simultaneously.
+						Build a lovely space habitat in this tetromino-based
+						action-puzzle game.
 					</p>
-				</li>
-			</li>
-		</ul>
+					<li>
+						<h3>
+							<a href="https://github.com/sackeyjason/bankoso/"
+								><img
+									src="/images/bankoso.png"
+									alt="4 screenshots"
+								/> Bankoso</a
+							>
+						</h3>
 
-		<Window title="(dis/)embodiment">
+						<p>
+							Sokoban-like puzzle game. Push blocks around. Unlike
+							in the original, here you can shove multiple blocks
+							simultaneously.
+						</p>
+					</li>
+				</li>
+			</ul>
+		</Window>
+		<Window title="🏃‍♂️ (dis/)embodiment">
 			<blockquote class="panel">
 				<details>
 					<summary>
@@ -102,122 +102,123 @@ import Window from "../components/Window.astro";
 				</details>
 			</blockquote>
 			<div>
-				<h2>Climbing</h2>
 				<p>
 					I use Instagram for my <a
 						href="https://www.instagram.com/jsonsackey/"
-						>bouldering videos.</a
-					>
+						>bouldering videos</a
+					> and also like to 🕺 dance and 🤼 wrestle.
 				</p>
 
-				<p>
-					”I quite like having a body, being able to walk around and
-					breathe.”
-				</p>
+				<center>
+					<small>
+						”I quite like having a body, being able to walk around
+						and breathe.”</small
+					>
+				</center>
 			</div>
 		</Window>
-
-		<div class="panel" style="display: inline-block; padding: 0.5rem">
-			<a href="https://www.admonymous.co/jasonsackey">Feedback</a>
-		</div>
-		<footer>⊙</footer>
-
-		<style>
-			body {
-				margin: 0;
-			}
-			header {
-				display: flex;
-			}
-			.selfie-wrapper {
-				aspect-ratio: 1;
-				align-self: flex-start;
-				width: 256px;
-				height: 256px;
-				max-width: 30%;
-				position: relative;
-			}
-			.selfie {
-				filter: brightness(1.4);
-			}
-			.selfie-wrapper:after {
-				content: "";
-				display: block;
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				left: 0;
-				top: 0;
-				background: var(--color-primary);
-				mix-blend-mode: color;
-			}
-			.header-body {
-				margin: 1rem;
-				display: flex;
-				flex-direction: column;
-				gap: 1rem;
-				justify-content: center;
-			}
-			.header-body > * {
-				margin: 0;
-			}
-			h1 {
-				text-shadow: 4px 4px 0 color-mix(in hsl, var(--color-primary), transparent 70%);
-			}
-			.socials-wrapper {
-				align-self: flex-start;
-				border: 1px solid var(--color-primary);
-				border-left: none;
-				border-right: none;
-				padding: 1rem 0;
-			}
-
-			.container {
-				margin: 0;
-				padding: 0 1rem;
-				max-width: 740px;
-			}
-			.panel {
-				margin: 0.5rem 0;
-				border: 1px dashed var(--color-primary);
-			}
-			.panel summary {
-				padding: 0.5rem;
-				border-bottom: 1px dashed
-					color-mix(in hsl, var(--color-primary), transparent 50%);
-			}
-			.panel .details-content {
-				padding: 0.5rem;
-			}
-			.games {
-				margin: 1rem 0;
-				padding: 0 0 0 0.5rem;
-				display: grid;
-				gap: 1rem;
-				grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-			}
-			.games li {
-				overflow: hidden;
-				padding: 1rem;
-				border: 1px solid;
-				border-radius: 8px;
-			}
-			.games img {
-				float: left;
-				width: 128px;
-				margin: 0 0.5rem 0.5rem 0;
-			}
-			.games li > :first-child {
-				margin-top: 0;
-			}
-			.games li > :last-child {
-				margin-bottom: 0;
-			}
-			footer {
-				padding: 4rem 0;
-				text-align: center;
-				color: var(--color-secondary);
-			}
-		</style>
 	</div>
+	<footer>⊙</footer>
 </Layout>
+
+<style>
+	body {
+		margin: 0;
+	}
+	header {
+		display: flex;
+	}
+	.selfie-wrapper {
+		aspect-ratio: 1;
+		align-self: flex-start;
+		width: 256px;
+		height: 256px;
+		max-width: 30%;
+		position: relative;
+	}
+	.selfie {
+		filter: brightness(1.4);
+	}
+	.selfie-wrapper:after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+		background: var(--color-primary);
+		mix-blend-mode: color;
+	}
+	.header-body {
+		margin: 1rem;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		justify-content: center;
+	}
+	.header-body > * {
+		margin: 0;
+	}
+	h1 {
+		text-shadow: 4px 4px 0
+			color-mix(in hsl, var(--color-primary), transparent 70%);
+	}
+	.socials-wrapper {
+		align-self: flex-start;
+		border: 1px solid var(--color-primary);
+		border-left: none;
+		border-right: none;
+		padding: 1rem 0;
+	}
+
+	.container {
+		margin: 0;
+		padding: 0 1rem;
+		max-width: 100%;
+		display: flex;
+		gap: 1rem;
+		flex-wrap: wrap;
+	}
+	.panel {
+		margin: 0.5rem 0;
+		border: 1px dashed var(--color-primary);
+	}
+	.panel summary {
+		padding: 0.5rem;
+		border-bottom: 1px dashed
+			color-mix(in hsl, var(--color-primary), transparent 50%);
+	}
+	.panel .details-content {
+		padding: 0.5rem;
+	}
+	.games {
+		margin: 1rem 0;
+		padding: 0;
+		display: grid;
+		gap: 1rem;
+		grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+	}
+	.games li {
+		overflow: hidden;
+		padding: 1rem;
+		border: 1px solid;
+		border-radius: 8px;
+	}
+	.games img {
+		float: left;
+		width: 128px;
+		margin: 0 0.5rem 0.5rem 0;
+	}
+	.games li > :first-child {
+		margin-top: 0;
+	}
+	.games li > :last-child {
+		margin-bottom: 0;
+	}
+	footer {
+		padding: 4rem 0;
+		text-align: center;
+		color: var(--color-secondary);
+	}
+</style>
