--- a/src/components/Window.astro
+++ b/src/components/Window.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props;
 ---
 
 <article class="root">
-    <header class="title">·{title}</header>
+    <header class="title">{title}</header>
     <div class="body">
         <slot />
     </div>
