--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,11 +3,15 @@ import Layout from "../../layouts/Layout.astro";
 import Socials from "../../components/Socials.astro";
 const allPosts = await Astro.glob("./*.md");
 allPosts.reverse();
-const postList = allPosts.map((post) => {
+const postList = allPosts.map((post, i, a) => {
     return {
         url: post.url,
         title: post.frontmatter.title,
         date: post.frontmatter.date,
+        newYear:
+            i > 0 &&
+            new Date(post.frontmatter.date).getFullYear() !==
+                new Date(a[i - 1].frontmatter.date).getFullYear(),
     };
 });
 ---
@@ -18,10 +22,10 @@ const postList = allPosts.map((post) => {
     <ul class="posts">
         {
             postList.map((post) => (
-                <li>
+                <li class={post.newYear ? 'ny' : 'x'}>
                     <a href={post.url}>
-                        <span class="title">{post.title}</span>
                         <span class="date">{post.date}</span>
+                        <span class="title">{post.title}</span>
                     </a>
                 </li>
             ))
@@ -38,24 +42,28 @@ const postList = allPosts.map((post) => {
         padding: 0;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
+        align-items: stretch;
+        gap: 0.25rem;
         list-style: none;
+    }
+    .posts .ny {
+        border-top: 1px solid;
+        padding-top: .5rem;
+        margin-top: .25rem;
     }
     .posts a {
         text-decoration: none;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: flex-start;
-        gap: .25rem;
+        gap: 0.5rem;
+        font-weight: bold;
     }
     .title {
-        font-weight: bold;
-        display: block;
     }
     .date {
         color: var(--color-text);
-        font-size: 14px;
+        font-family: consolas, monospace;
     }
     hr {
         margin: 2rem 0;
