--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -64,6 +64,7 @@ const postList = allPosts.map((post, i, a) => {
     .date {
         color: var(--color-text);
         font-family: consolas, monospace;
+        white-space: nowrap;
     }
     hr {
         margin: 2rem 0;
