--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,10 +33,10 @@ import Window from "../components/Window.astro";
 				/>
 			</div>
 		</Window>
-		<!-- <Window title="📝 writing">
+		<Window title="📝 writing">
 			<LatestPosts />
 			<p><a href="/blog">Full blog listing</a></p>
-		</Window> -->
+		</Window>
 
 		<Window title="👾 games">
 			<h2>Game prototypes</h2>
