--- a/src/layouts/Site.astro
+++ b/src/layouts/Site.astro
@@ -74,5 +74,11 @@ const { title } = Astro.props;
 		a:hover {
 			color: var(--color-secondary);
 		}
+		ul[class] {
+			padding: 0;
+			li {
+				list-style: none;
+			}
+		}
 	</style>
 </html>
